--- a/gorilla.html
+++ b/gorilla.html
@@ -1,6 +1,9 @@
 <html>
+  <head>
+	<title>Gorillas Website</title>
+  </head>
   <body> 
+	<h1>Hello Gorillas!</h1>
+	<p>Gorillas are cool!</p>
   </body>
-  <title>Gorilla Website</title>
-  <p>Hello Gorillas!</p>
 </html>
