--- a/gorilla.html
+++ b/gorilla.html
@@ -1,12 +1,18 @@
 <html>
-  h1 {
-	text-align:center;
-  }
+  <style>
+	h1 {
+		text-align:center;
+	}
+    .bodytext {
+		text-align:center;
+	}
+  </style>
+  
   <head>
 	<title>Gorillas Website</title>
   </head>
   <body> 
 	<h1>Hello Gorillas!</h1>
-	<p>Gorillas are cool!</p>
+	<p class = bodytext>Gorillas are cool!</p>
   </body>
 </html>
